--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -11,3 +11,9 @@ body {
     padding: 0;
     margin: 0;
 }
+.card{
+    width: calc((100% / 5) - 2rem);
+    margin: 1rem;
+    background-color: rgba(0, 0, 0, 0.717);
+    color: white;
+}
